fix job row overflow

--- a/src/sass/60_components/_components.team-card.scss
+++ b/src/sass/60_components/_components.team-card.scss
@@ -225,51 +225,55 @@
     }
 
     &.--job {
-      font-size: 1rem;
-      line-height: 1.75rem;
-      transition: opacity 0.6s ease-in-out, padding-bottom 0.1s ease-in-out 0.5s;
-      display: -webkit-box;
-      -webkit-box-orient: vertical;
       overflow: hidden;
-      text-overflow: ellipsis;
-      -webkit-line-clamp: 1;
-      line-clamp: 1;
+      transition: opacity 0.6s ease-in-out, padding-bottom 0.1s ease-in-out 0.5s;
 
-      @media (min-width: 420px) {
-        -webkit-line-clamp: 3;
-        line-clamp: 3;
-      }
+      .c-team-card__job {
+        font-size: 1rem;
+        line-height: 1.75rem;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        -webkit-line-clamp: 1;
+        line-clamp: 1;
 
-      @media (min-width: 500px) {
-        -webkit-line-clamp: 4;
-        line-clamp: 4;
-      }
-
-      @include media-breakpoint-up(sm) {
-        -webkit-line-clamp: 6;
-        line-clamp: 6;
-      }
-
-      @include media-breakpoint-up(md) {
-        -webkit-line-clamp: 2;
-        line-clamp: 2;
-      }
-
-      @include media-breakpoint-only(md) {
-        .c-team__members & {
-          -webkit-line-clamp: 1;
-          line-clamp: 1;
+        @media (min-width: 420px) {
+          -webkit-line-clamp: 3;
+          line-clamp: 3;
         }
-      }
 
-      @include media-breakpoint-up(lg) {
-        -webkit-line-clamp: 3;
-        line-clamp: 3;
-      }
+        @media (min-width: 500px) {
+          -webkit-line-clamp: 4;
+          line-clamp: 4;
+        }
 
-      @include media-breakpoint-up(xxl) {
-        -webkit-line-clamp: 2;
-        line-clamp: 2;
+        @include media-breakpoint-up(sm) {
+          -webkit-line-clamp: 6;
+          line-clamp: 6;
+        }
+
+        @include media-breakpoint-up(md) {
+          -webkit-line-clamp: 2;
+          line-clamp: 2;
+        }
+
+        @include media-breakpoint-only(md) {
+          .c-team__members & {
+            -webkit-line-clamp: 1;
+            line-clamp: 1;
+          }
+        }
+
+        @include media-breakpoint-up(lg) {
+          -webkit-line-clamp: 3;
+          line-clamp: 3;
+        }
+
+        @include media-breakpoint-up(xxl) {
+          -webkit-line-clamp: 2;
+          line-clamp: 2;
+        }
       }
     }
 
